crates/reinhardt-core/macros/tests/ui/validate/fail/range_no_args.stderr
error: range() requires at least `min` or `max`
 --> tests/ui/validate/fail/range_no_args.rs:7:10
  |
7 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
